# roblox-packages

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
scripts/: unpack-releases.sh  zip-release.sh  zip-releases.sh
src/: command.rs  install.rs  lib.rs  list.rs  main.rs  roblox.rs
